Add pseudo selector, Add first-child to job class

--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -2,6 +2,12 @@
   font-size: .8em;
 }
 
+#contact-info:hover {
+color: #d62d20;
+font-weight: bold;
+}
+
+
 .job {
   background-color: #e9e5dc;
   border-radius: 5px;
@@ -11,4 +17,8 @@
 
 .smaller-text {
   font-size: .8em;
+}
+
+.job > h3:first-child {
+  color: red;
 }
