--- a/web_dev/sinatra_templating/views/transfer_student.erb
+++ b/web_dev/sinatra_templating/views/transfer_student.erb
@@ -4,13 +4,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Student Management System</h1>
-  <p>Welcome to the student management system.</p>
-  <p>Click <a href="students/transfer">here</a> to move a student.</p>
-  <ul>
-    <% @students.each do |student| %>
-      <li><%= student['name'] %>, <%= student['age'] %></li>
-    <% end %>
-  </ul>
+  <form action="/students_transfer" method="POST">
+    <input type="text" name="name" placeholder="Name">
+    <button type="submit">Add</button>
 </body>
 </html>
