--- a/web_dev/sinatra_templating/views/delete_student.erb
+++ b/web_dev/sinatra_templating/views/delete_student.erb
@@ -4,7 +4,7 @@
   <title>Delete Student</title>
 </head>
 <body>
-  <form action="/students" method="POST">
+  <form action="/students_1" method="POST">
     <input type="text" name="name" placeholder="Name">
     <button type="submit">Delete</button>
   </form>
